rename of style2.css to responsive.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>Responsive Website</title>
 </head>
 
@@ -42,6 +42,7 @@
         </div>
     </nav>
     <header>
+
         <div class="container header-section flex">
             <div class="header-left">
                 <h1>Design Confidently</h1>
@@ -54,7 +55,7 @@
 
         </div>
     </header>
-    <section class="companies-section">
+    <section class="companies-section ">
         <div class="container">
             <div class="small-text-bold companies-header">
                 The world's best companies rely on UsabilityHub to make better design decisions.
